--- a/data/menu.toml
+++ b/data/menu.toml
@@ -2,7 +2,7 @@
 title = "Info"
 
   [[entries.entries]]
-  title = "X: <a href='https://x.com/0xrohadi'>@0xrohadi</a>"
+  title = "X: <a href='https://x.com/0xrohadi'>0xrohadi</a>"
 
 [[entries]]
 title = "Recent Posts"
